<resources>
    <string name="APP_NAME">BullsAndCows</string>
    <string name="SET_YOUR_NAME_HINT">Set your name</string>
    <string name="DATE_TITLE">Date of win</string>
    <string name="NIK_NAME_TITLE">Nik name</string>
    <string name="MOVES_TITLE">Moves</string>
    <string name="TIME_TITLE">Time</string>
    <string name="WELCOME_TEXT">Welcome!
    You start funny logical game.
    Good luck!</string>
    <string name="WELCOME_HINT">Entered your name</string>
    <string name="CONFIRM_YOU_NAME">Confirm your name</string>
    <string name="VERSION">Version of application</string>
    <string name="HIGHEST_VERSION">Your app has current version</string>
    <string name="VISIT_SITE_OF_APP_BUTTON">Visit site of project</string>
    <string name="WIN_MASSAGE">Congratulation! You are win!</string>
    <string name="WIN_RESULT_MASSAGE">You result:</string>
    <string name="START_SPLASH_TEXT_VIEW">Bulls and Cows</string>
    <string name="START_SPLASH_2_TEXT_VIEW">Logical game</string>
    <string name="USER_NAME_REGISTRATION_TEXT_VIEW">Your name</string>
    <string name="PASSWORD">Password</string>
    <string name="CONFIRM_YOUR_PASSWORD">Confirm password</string>
    <string name="COUNTRY">Country</string>
    <string name="EMAIL_FIELD">Email</string>
    <string name="NEW_USER">Registered new player</string>
    <string name="MESSAGE_FOR_REGISTRATION">Please, complete  this form</string>
    <string name="LOGIN_BUTTON">Login</string>
    <string name="REGISTER_BUTTON">Registration</string>
    <string name="USER_ALREADY_EXIST">"User with this name already Exist\n Choose other name"</string>
    <string name="KEEP_PASSWORD_AND_LOGIN">Keep login and password</string>
    <string name="REFRESH_RECORDS">Refresh records</string>
    <string name="START_DOWNLOAD_NEW_VERSION">Start load new version</string>
    <string name="FINISH_DOWNLOAD_NEW_VERSION">Finish download version</string>
    <string name="FAILED_DOWNLOAD_NEW_VERSION">Failed download</string>
    <string name="TRY_AGAIN">Try download later</string>
    <string name="VISIT_SITE">Visit site of project</string>
    <string name="SHORT_DESCRIPTION">Short description</string>
    <string name="BUTTON_1">1</string>
    <string name="BUTTON_2">2</string>
    <string name="BUTTON_3">3</string>
    <string name="BUTTON_4">4</string>
    <string name="BUTTON_5">5</string>
    <string name="BUTTON_6">6</string>
    <string name="BUTTON_7">7</string>
    <string name="BUTTON_8">8</string>
    <string name="BUTTON_9">9</string>
    <string name="BUTTON_0">0</string>
    <string name="SHOW_NUMBER">Show number</string>
    <string name="START_GAME">Start game</string>
    <string name="ENTER">Enter</string>
    <string name="DELETE">Del</string>
    <string name="GUEST">Guest</string>
    <string name="NOT_CONNECT_TO_INTERNET">"Don't have connection to internet"</string>
    <string name="SUCCESS_LOGGED">You success logged</string>
    <string name="ENGLISH_LANGUAGE">English</string>
    <string name="BELARUS_LANGUAGE">Belarus</string>
    <string name="CHOICE_LANGUAGE_BUTTON">Language setting</string>
    <string name="WON_MESSAGE">WON!</string>
    <string name="CONGRATULATIONS">Congratulations, "</string>
    <string name="YOU_WIN">! \nYou Won! "\n</string>
    <string name="YOUR_RESULT">You result: "</string>
    <string name="NUMBER_OF_DIGITS">-digits number, your find on "</string>
    <string name="WIN_TIME">" moves, by "</string>
    <string name="LANGUAGE_COD">ENG</string>
    <string name="ENTER_NUMBER">Enter </string>
    <string name="TOAST_MESSAGE_WITH_RULE">-digits number, without repeating digits!</string>
    <string name="WE_BACK_WITHOUT_CHANGE">We back without change</string>
    <string name="COUNTRY_SPINNER">Choose country</string>
    <string name="ABOUT_APP">About application</string>
    <string name="ABOUT_DEVELOPER">About developer</string>
    <string name="LOGIN_OR_PASSWORD_WRONG">"Login or password is wrong"</string>
    <string name="CONTINUE_OFFLINE_GAME">You continue offline game</string>
    <string name="RULES_MENU">Rules</string>
    <string name="SETTING_MENU">Settings</string>
    <string name="ABOUT_MENU">About</string>
    <string name="RECORDS_MENU">Records</string>
    <string name="USER_NOT_EXIST">Information not exist </string>
    <string name="COUNTRY_FLAG">Country flag</string>
    <string name="LAST_FIVE_RECORD">Last five records</string>
    <string name="BEST_USER_RECORDS">Best user records</string>
    <string name="YOUR_PROFILE">Your profile</string>
    <string name="ONLINE_STATUS">Online Status</string>
    <string name="LOGIN_ITEM">Login in</string>
    <string name="CODED_NUMBER">Coded number</string>
    <string name="APPLY_CHANGES">Applay changes</string>
    <string name="EDIT_PROFILE">Edit profile</string>
    <string name="SUBMIT_PHOTO">Submit photo</string>
    <string name="USER_PHOTO">User photo</string>
    <string name="IMAGE_URL">Image url</string>
    <string name="SAVE_CHANGES">Save changes</string>
    <string name="EMAIL">Email</string>
    <string name="SEX">Sex</string>
    <string name="AGE">Age</string>
    <string name="ABOUT_ITSELF">About itself</string>
    <string name="SUCCESS_UPDATE">Success update</string>
    <string name="WRONG_UPDATE">Wrong update</string>
    <string name="LAST_USER_VISIT">Last visit: "</string>
    <string name="TOTAL_PLAYED_GAMES">Total played games: "</string>
    <string name="NUMBER_GAME_BY_COD">Played games</string>
    <string name="UPDATE_YOUR_APP">Press, for download new version</string>
    <string name="UPDATE_RESULT_TO_ONLINE">Update result to online</string>
    <string name="ONLINE_RECORDS_WITH_PAGINATION">Records with pagination</string>
    <string name="NEW_VERSION_TITLE">Available new version: "</string>
    <string name="APP_IS_OLD_VERSION">Your app is old version</string>
    <string name="PRESS_FOR_UPGRADE">Press for upgrade yor app for version</string>
    <string name="SORT_ITEM">Sort records</string>
    <string-array name="rules_items">
        <item>This is simple logical game</item>
        <item>"You mast be find number what coded your nice phone </item>
        <item>If number stay in same position it is bull</item>
        <item>If number stay in other position it is cow</item>
        <item>Good luck! </item>
        <item>This is simple logical game</item>
        <item>This is simple logical game</item>
        <item>This is simple logical game</item>
        <item>This is simple logical game</item>
        <item>This is simple logical game</item>
        <item>This is simple logical game</item>
        <item>This is simple logical game</item>
    </string-array>
    <string-array name="coded_list_array">
        <item>Eny</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="last_result_time_array">
        <item>Eny</item>
        <item>Last day</item>
        <item>Last week</item>
    </string-array>
    <string name="SUCCESS_UPLOAD">Success upload</string>
    <string name="DAY_RATING">Day raiting</string>
    <string name="DASH">---</string>
    <string name="CODED">Coded: "</string>
    <string name="PROFILE_SUCCES_UPDATE">Profile success update</string>
    <string name="PROFILE_NOT_UPDATE">Profile not update</string>
    <string name="UPLOAD_PHOTO">Upload photo</string>
    <string name="ENTERED_URL_OF_PHOTO">Entered photo url</string>
    <string name="PRESS_FOR_GET_RULES">Press for me, if you want know rules</string>
    <string name="BULL">Bull</string>
    <string name="COW">Cow</string>
    <string name="ACTUAL_RATING_POSITION">Position: \"</string>
    <string name="HINT_FOR_INPUT_FIELD">Number</string>
    <string name="START_TIMER">00:00</string>
    <string name="WEEK_RATING">Week rating</string>
    <string name="EDIT_YOUR_PROFILE">Edit your profile</string>
    <string name="CONFIRM_PASSWORDS_FOR_SAVE_CHANGES">Confirm passwords for save changes</string>
    <string name="ONLY_ONLINE_RESULT">Only online results</string>
    <string name="TRY_LOGIN_LATE">Try login later</string>
    <string name="DEFAULT_AGE">0</string>
    <string name="CODED_SYMBOL">C:</string>
    <string name="RATING_POSITION_SYMBOL">P:</string>
    <string name="ACTUAL_POSITION_SIMBOL">A:</string>
    <string name="YOUR_POSITION">Your position: "</string>
</resources>