<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/record_item_menu"
        android:icon="@drawable/certificate"
        android:title="@string/RECORDS_MENU"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings_item_menu"
        android:icon="@drawable/settings"
        android:title="@string/SETTING_MENU"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about_item_menu"
        android:icon="@drawable/developer_board"
        android:title="@string/ABOUT_MENU"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/rules_item_menu"
        android:icon="@drawable/bullgood"
        android:title="@string/RULES_MENU"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/login_page_item_menu"
        android:icon="@drawable/login_variant"
        android:title="@string/LOGIN_ITEM"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/edit_profile_menu"
        android:title="@string/EDIT_PROFILE"/>
</menu>