<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/LIGHT_GREY"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/button_1"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:onClick="onClickButton"
            android:tag="1"
            android:text="@string/BUTTON_1"/>

        <TextView
            android:id="@+id/button_2"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:onClick="onClickButton"
            android:tag="2"
            android:text="@string/BUTTON_2"/>

        <TextView
            android:id="@+id/button_3"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:onClick="onClickButton"
            android:tag="3"
            android:text="@string/BUTTON_3"/>

        <TextView
            android:id="@+id/button_4"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:onClick="onClickButton"
            android:tag="4"
            android:text="@string/BUTTON_4"/>

        <TextView
            android:id="@+id/button_5"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="0.2"
            android:onClick="onClickButton"
            android:tag="5"
            android:text="@string/BUTTON_5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_6"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:onClick="onClickButton"
            android:tag="6"
            android:text="@string/BUTTON_6"/>

        <TextView
            android:id="@+id/button_7"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:onClick="onClickButton"
            android:tag="7"
            android:text="@string/BUTTON_7"/>

        <TextView
            android:id="@+id/button_8"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:onClick="onClickButton"
            android:tag="8"
            android:text="@string/BUTTON_8"/>

        <TextView
            android:id="@+id/button_9"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:onClick="onClickButton"
            android:tag="9"
            android:text="@string/BUTTON_9"/>

        <TextView
            android:id="@+id/button_0"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="0.2"
            android:onClick="onClickButton"
            android:tag="0"
            android:text="@string/BUTTON_0"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!--<TextView-->
            <!--android:id="@+id/start"-->
            <!--style="@style/Buttons.Down"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="0.4"-->
            <!--android:text="@string/START_GAME"/>-->

        <TextView
            android:id="@+id/enter"
            style="@style/Buttons.Down"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_weight="0.4"
            android:onClick="onClickButton"
            android:text="@string/ENTER"/>

        <TextView
            android:id="@+id/buttomDel"
            style="@style/Buttons.Down"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="0.1"
            android:onClick="onClickButton"
            android:text="@string/DELETE"/>
    </LinearLayout>
</LinearLayout>

