<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/LIGHT_GREY"
    android:orientation="vertical"
    tools:context="com.example.notepad.bullsandcows.ui.activity.fragments.UserInfoRecordFragment">

    <RelativeLayout
        style="@style/GeneralBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start">


        <TextView
            android:id="@+id/nik_info_fragment_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_toEndOf="@+id/user_image_info_fragment_image_view"
            android:layout_toRightOf="@+id/user_image_info_fragment_image_view"
            android:maxLength="20"
            android:text="@string/USER_NOT_EXIST"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/country_flag_fragment_image_view"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_margin="4dp"
            android:layout_toEndOf="@+id/nik_info_fragment_text_view"
            android:layout_toRightOf="@+id/nik_info_fragment_text_view"
            android:contentDescription="@string/COUNTRY_FLAG"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/last_visit_fragment_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/user_image_info_fragment_image_view"
            android:layout_margin="4dp"
            android:layout_toEndOf="@+id/lable_played_games_text_view"
            android:layout_toRightOf="@+id/lable_played_games_text_view" />

        <TextView
            android:id="@+id/lable_played_games_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/user_image_info_fragment_image_view"
            android:layout_margin="4dp"
            android:layout_toEndOf="@+id/user_image_info_fragment_image_view"
            android:layout_toRightOf="@+id/user_image_info_fragment_image_view"
            android:labelFor="@id/last_visit_fragment_image_view"
            android:text="@string/LAST_USER_VISIT" />

        <TextView
            android:id="@+id/number_played_game_fragment_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nik_info_fragment_text_view"
            android:layout_margin="4dp"
            android:layout_toEndOf="@+id/lable_number_played_games_text_view"
            android:layout_toRightOf="@+id/lable_number_played_games_text_view" />

        <TextView
            android:id="@+id/lable_number_played_games_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nik_info_fragment_text_view"
            android:layout_margin="4dp"
            android:layout_toEndOf="@+id/user_image_info_fragment_image_view"
            android:layout_toRightOf="@+id/user_image_info_fragment_image_view"
            android:text="@string/TOTAL_PLAYED_GAMES" />

        <ImageView
            android:id="@+id/user_image_info_fragment_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/USER_NOT_EXIST" />

        <ImageView
            android:id="@+id/online_status_fragment_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/user_image_info_fragment_image_view"
            android:layout_alignEnd="@+id/user_image_info_fragment_image_view"
            android:layout_alignRight="@+id/user_image_info_fragment_image_view"
            android:layout_margin="4dp"
            android:contentDescription="@string/ONLINE_STATUS"
            android:src="@drawable/offline" />
    </RelativeLayout>

    <TextView
        android:id="@+id/your_profile_page_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YOUR_PROFILE"
        android:textColor="@color/RED_BUTTON"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/BEST_USER_RECORDS"
        android:textSize="36sp" />

    <include layout="@layout/titles_for_records" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/best_user_records_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/LAST_FIVE_RECORD"
        android:textSize="36sp" />

    <include layout="@layout/titles_for_last_five_records" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/last_five_user_records_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
